Karty płatnicze - operacje zbliżeniowe bez PIN, walidacja formularzy przy tworzeniu kart, usuwanie konta wraz z kartą obciążeniową, drobne poprawki.

--- a/src/main/webapp/WEB-INF/flows/debitCardAdd/debitCardAdd.xhtml
+++ b/src/main/webapp/WEB-INF/flows/debitCardAdd/debitCardAdd.xhtml
@@ -10,7 +10,7 @@
 	<ui:define name="pageContent">
 		<h:form>
 			<div class="ui-grid ui-grid-responsive">
-				
+			<h2>Wybierz kartę debetową</h2>
 				<p:dataTable value="#{debitCards}" var="debitCard">
 					<p:column>
 						<f:facet name="header">Limit operacji gotówkowych</f:facet>
