--- a/src/main/webapp/WEB-INF/flows/paymentTerminal/paymentTerminal.xhtml
+++ b/src/main/webapp/WEB-INF/flows/paymentTerminal/paymentTerminal.xhtml
@@ -11,9 +11,8 @@
 	<ui:define name="pageContent">
 		<h:form>
 			<div class="ui-grid ui-grid-responsive">
-
 				<h:form>
-				<p:messages />
+				<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
 					<h:panelGrid columns="3" style="margin-bottom:10px" cellpadding="5">
 					
 						<p:outputLabel value="Rodzaj operacji:" for="operationType"/>
