wyswietlanie kredytow, zpis do bazy

--- a/src/main/webapp/WEB-INF/flows/simulation/showInstalments.xhtml
+++ b/src/main/webapp/WEB-INF/flows/simulation/showInstalments.xhtml
@@ -43,6 +43,11 @@
 							</h:outputText>
 						</p:column>
 				</p:dataTable>
+				<div class="ui-grid-row">
+						<p:commandButton action="addCredit" value="Zaciągnij kredyt"
+										style="width: 100%; margin-bottom: 5%; font-size: 20px">
+						</p:commandButton>
+				</div>
 			</div>
 		</h:form>
 
